--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "analyze": "vite build --mode production",
+    "lighthouse": "lhci autorun"
   },
   "dependencies": {
     "firebase": "^11.4.0",
@@ -18,18 +20,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@lhci/cli": "^0.14.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.3",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.4.1",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "autoprefixer": "^9.8.8",
+    "cssnano": "^7.0.6",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^7.0.39",
+    "rollup-plugin-visualizer": "^5.14.0",
     "tailwindcss": "^4.1.3",
+    "terser": "^5.39.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
